@@ -1,15 +1,15 @@
-Opera is powerful If you use the web for work or for entertainment. Features:
-* Renders HTML 3.2 and 4.0 Pages
-* Executes most EcmaScript 1.1 (Ecma-262 v.3) programs
-* Renders CSS 1 and 2 extensions
+Opera7 is powerful if you use the either web for work or for entertainment.
+Features:
+* Supports HTML 3.2, 4.0, 4.01; XHTML 1.0; WML 1.3 & 2.0; XML; CSS 1.0, 2.0,
+  2.1, 3.0; EcmaScript ECMA-262 2ed, 3ed (JavaScript 1.3/1.5 Core); DOM 1, 2
 * Browses FTP Sites
+* Built-in M2 mail client
 * Handles cookies
-* Supports HTTP 1.0 and 1.1
 * Displays GIF, PNG and JPEG
 * Hot list, bookmarks and bookmark bar
+* Unique mouse gestures for easier browsing
+* Pop-up defense features
 * Imports Netscape, Konqueror and IE bookmarks/favorites
-* Support for XML
-* Support for WML (WAP)
 * Proxy server support
 * Communication through SSL and TLS
 * HTTP Authorization
