@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.5 2003/05/21 12:26:55 tron Exp $
+# $NetBSD: Makefile,v 1.6 2003/05/23 21:32:25 jdolecek Exp $
 
 DISTNAME=	opera-${OPERA_PKG_VERSION}
 CATEGORIES=	www
@@ -30,7 +30,7 @@ USE_BUILDLINK2=	# defined
 .include "../../mk/bsd.prefs.mk"
 
 # A default so lintpkgsrc is happy
-OPERA_PKG_VERSION=	7.11beta2
+OPERA_PKG_VERSION=	7.11
 
 .if (${MACHINE_ARCH} == i386)
 DEPENDS+=	suse_compat>=6.3:../../emulators/${SUSE_DIR_PREFIX}_compat
@@ -40,9 +40,9 @@ DEPENDS+=	suse_libpng>=6.4:../../emulators/${SUSE_DIR_PREFIX}_libpng
 DEPENDS+=	suse_x11>=6.3:../../emulators/${SUSE_DIR_PREFIX}_x11
 
 OPERA_ARCH=		i386
-OPERA_PKG_VERSION=	7.11beta2
-OPERA_DIR=		${OPERA_PKG_VERSION:S/.//g:C/beta.*//}/beta2/en/i386/static
-OPERA_DIST_VERSION=	${OPERA_PKG_VERSION:C/beta.*//}-20030512.1-static-qt
+OPERA_PKG_VERSION=	7.11
+OPERA_DIR=		${OPERA_PKG_VERSION:S/.//g:C/beta.*//}/final/en/i386/static
+OPERA_DIST_VERSION=	${OPERA_PKG_VERSION:C/beta.*//}-20030515.1-static-qt
 .endif
 
 RPMFILES=	${DISTFILES}
